# daerwen3.5

./: .gitignore  CITATION.cff  LICENSE  README.md  RESEARCH_STATUS.md  __init__.py  requirements_performance.txt
benchmark_results/: brutal_fast_20260318_092119.json  brutal_fast_20260318_094707.json  brutal_fast_20260318_100744.json  brutal_fast_20260318_150953.json  brutal_fast_20260407_174428.json  brutal_fast_20260407_182851.json  unconscious_20260318_103531.json  unconscious_20260318_105529.json
checkpoints/: ecology_step190000_20251007_200551_summary.json  ecology_step200000_20251007_201030_summary.json  ecology_step210000_20251007_201509_summary.json  ecology_step220000_20251007_201948_summary.json  ecology_step230000_20251007_202426_summary.json
chem_sim_rs/: Cargo.toml
chem_sim_rs/core/: Cargo.toml
chem_sim_rs/core/src/: atom.rs  lib.rs  physics.rs  rules.rs  snapshot.rs  spatial.rs  world.rs
chem_sim_rs/core/tests/: abiogenesis.rs  classical_experiments.rs  replication.rs  stress.rs  stress_parallel.rs
chem_sim_rs/python/: Cargo.toml  pyproject.toml
chem_sim_rs/python/src/: lib.rs
controllers/: manual_driver.py  predictive_controller.py  state_aggregator.py
docs/: AGI_VISION.md  API_REFERENCE.md  CORE_OVERVIEW.md  INDEX.md  MVS_RUNBOOK.md  PHASE_C_DESIGN.md  TYPES_INDEX.md  V2_HARDENING_CHECKLIST.md
docs/archive/: ARCHITECTURE_DESIGN_DAERWEN2.md  ARCHIVE_AND_DEPRECATED.md
docs/design/: PHILOSOPHY_AND_THEORY.md  ROADMAP_AND_RESEARCH.md
docs/notes/: DUAL_PROCESS_AGI.md  project_review.md  project_snapshot_daerwen3.5.md  session_summary_gpu.md  哲学讨论记录-从设计师陷阱到宇宙本质.md  新的想法和思路.txt
docs/types/: ENGINEERING_SPEC_AND_GUARDRAILS.md  GENOTYPE_TO_PHENOTYPE_FIRST_PRINCIPLES.md  (+2 more)
engine/: __init__.py  _legacy_gene_expression.py  backend.py  chem_sim_genes.py  core.py  server.py  vis.html  web.html  ws_test.html
logs/: test_manual.jsonl
scripts/: evaluate_controllers.py  start_engine.py  start_engine_cpu.py
tests/: brutal_benchmark_fast.py  comprehensive_suite.py  quick_verify_params.py  test_chem_sim_genes.py  test_newborn_vs_evolved.py
(+7 files in other folders)
