[workspace]
resolver = "2"
members = ["core"]
# Phase 2 will add: "cli" (standalone benchmark binary), "python" (pyo3 bindings)

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hou Zehao <Wtoutcolby5x@swedenmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Chunsisisi/daerwen3.5"

[workspace.dependencies]
rand      = "0.8"
rand_pcg  = "0.3"
fxhash    = "0.2"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
rayon     = "1"

[profile.release]
opt-level = 3
lto       = "fat"
codegen-units = 1
