[package]
name        = "chem_sim_core"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
rand     = { workspace = true }
rand_pcg = { workspace = true }
fxhash   = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rayon    = { workspace = true }

[lib]
name = "chem_sim_core"
path = "src/lib.rs"
